--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -3,14 +3,14 @@
         <h2 class="post-title"><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
     </header>
     <section class="post-excerpt">
-        <p>{{ .Summary }} <a class="read-more" href="{{.RelPermalink}}">Read more &raquo;</a></p>
+        <p>{{ .Summary }} <a class="read-more" href="{{.RelPermalink}}">More &raquo;</a></p>
     </section>
-    <footer class="footline" >
-<!-- EY - Nov 2017 won't use this
+    <footer class=" footline" >
+         
         {{with .Params.LastModifierDisplayName}}
-            <i class='fa fa-user'></i> <a href="mailto:{{ $.Params.LastModifierEmail }}">{{ . }}</a> {{with $.Date}} <i class='fa fa-calendar'></i> {{ .Format "Jan 2006" }}{{end}}
+            <i class='fa fa-user'></i> <a href="mailto:{{ $.Params.LastModifierEmail }}">{{ . }}</a> {{with $.Date}} <i class='fa fa-calendar'></i> {{ .Format "02/01/2006" }}{{end}}
         {{end}}
--->
+
         
         {{if .Params.tags }}  
             {{ range $index, $tag := .Params.tags }}
